<resources>
    <string name="app_name">Accelerometer_Reading_Test</string>
    <string name="Title">Accelerometer Reading Test</string>
    <string name="version">version 0.30</string>
    <string name="filename">File name</string>
    <string name="toDropbox">Send to Dropbox</string>
    <string name="b_save">Save</string>
    <string name="email">Email Address</string>
    <string name="b_send">Send</string>
    <string name="readings">readings</string>
    <string name="sensor">Sensor Status</string>
    <string name="action_settings">Settings</string>
</resources>
