<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".File_Saving"
    android:orientation="vertical">

    <TextView
        android:text="@string/Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="#FF0000"
        />
    <TextView
        android:text="@string/version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="10dp"
        android:textColor="#000000"
        />
    <TextView
        android:text="@string/toDropbox"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/transStatus"
        android:textSize="15dp"
        android:textColor="#00FF00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/b_send"
        android:text="@string/b_send"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:text="@string/sensor"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/reading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15dp"
        android:textColor="#780011"
        android:layout_marginTop="10dp"/>

    <TextView
        android:text="@string/readings"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:textColor="#FF6600"/>

    <Button
        android:id="@+id/sensor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20dp"/>
</LinearLayout>
